@@ -48,5 +48,6 @@ extern UV* sieve_cluster(mpz_t low, mpz_t high, uint32_t* cl, UV nc, UV *rn);
 extern void next_twin_prime(mpz_t res, mpz_t n);
 
 extern uint32_t* todigits(uint32_t *ndigits, mpz_t n, uint32_t base);
+extern void fromdigits(mpz_t n, uint32_t *d, uint32_t len, uint32_t base);
 
 #endif
