@@ -3,14 +3,16 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/todigits/;
+use Math::Prime::Util::GMP qw/todigits fromdigits/;
 use Math::BigInt;  # Don't use GMP so we don't have to work around bug
 
 plan tests =>  0
             + 12
             +  1
+            +  6 # fromdigits
             +  0;
 
+###### todigits
 is_deeply([todigits(0)], [], "todigits 0");
 is_deeply([todigits(1)], [1], "todigits 1");
 is_deeply([todigits(77)], [7,7], "todigits 77");
@@ -26,3 +28,10 @@ is_deeply([todigits(6345354,10,4)], [5,3,5,4], "todigits 6345354 base 10 len 4")
 
 is_deeply([todigits(-24)], [2,4], "todigits ignores sign");
 
+###### fromdigits
+is(fromdigits([]), 0, "fromdigits([]) = 0");
+is(fromdigits([1]), 1, "fromdigits([1]) = 1");
+is(fromdigits([1,0,1],2), 5, "101 base 2 = 5");
+is(fromdigits([1,1,2,1,2,0,2,0,1,0,1,1,1,2,0],3), 7749393, "fromdigits of 7749393 in base 3");
+is(fromdigits([0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0,1,0,0],2), 900, "handle leading zeros");
+is(fromdigits([14,3,0,15],16), 58127, "fromdigits of 58127 base 16");
